--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <a id="decoration" href="index.html">Hem</a>
         <a id="decoration" href="newsletter.html">Nyhetsbrev</a>
         <a id="decoration" href="contact.html">Kontakt</a>
-        <a id="decoration" href="maps.html">Karta</a> <br /><br />
+        <a id="decoration" href="maps.html">Karta</a>
         <search id="searchBar">
           <form action="/action_page.php" target="_blank">
             <input type="text" id="fsearch" name="fsearch" placeholder="" />
@@ -279,12 +279,12 @@
 
     <!--footer-->
     <footer>
-      <address id="adress">
-        Fredrica Alfredsson<br />
-        Nygatan 1<br />
-        123 45 HÖNÖ<br />
-        Telefon: 0123-45 67 89<br />
-      </address>
+      <article id="adress">
+        Fredrica Alfredsson <br />
+        Nygatan 1 <br />
+        123 45 HÖNÖ <br />
+        Telefon: 0123-45 67 89 <br />
+      </article>
       <div class="copyright">
         <span class="material-symbols-outlined"> copyright </span>
         Frippan
