ändringar kring responsivitet

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     <header>
       <!--Namnet på sidan och en fiskmås siluett med inline-style-->
       <h1 id="logoName">Västkustens paradis</h1>
-      <img src="image/fiskmås.jpg" alt="seagul" style="height: 5em" />
+      <img
+        id="bird-picture"
+        src="image/fiskmås.jpg"
+        alt="seagul"
+        style="height: 5em"
+      />
       <!--Sociala medier knappar-->
       <div class="container-logo">
         <div id="logo">
@@ -43,16 +48,16 @@
     <!--Öarnas namn som utgör Öckerö kommun-->
     <nav id="top">
       <div id="topText">
-        <a id="islandTags" href="rörö.html">Rörö</a> -
-        <a id="islandTags" href="hyppeln.html">Hyppeln</a> -
-        <a id="islandTags" href="knippla.html">Knippla</a> -
-        <a id="islandTags" href="björkö.html">Björkö</a> -
-        <a id="islandTags" href="hälsö.html">Hälsö</a> -
-        <a id="islandTags" href="öckerö.html">Öckerö</a> -
-        <a id="islandTags" href="kalvsund.html">Kalvsund</a> -
-        <a id="islandTags" href="hönö.html">Hönö</a> -
-        <a id="islandTags" href="grötö.html">Grötö</a> -
-        <a id="islandTags" href="fotö.html">Fotö</a>
+        <a id="islandTags" href="rörö.html">Rörö </a> -
+        <a id="islandTags" href="hyppeln.html"> Hyppeln </a> -
+        <a id="islandTags" href="knippla.html"> Knippla </a> -
+        <a id="islandTags" href="björkö.html"> Björkö </a> -
+        <a id="islandTags" href="hälsö.html"> Hälsö </a> -
+        <a id="islandTags" href="öckerö.html"> Öckerö </a> -
+        <a id="islandTags" href="kalvsund.html"> Kalvsund </a> -
+        <a id="islandTags" href="hönö.html"> Hönö </a> -
+        <a id="islandTags" href="grötö.html"> Grötö </a> -
+        <a id="islandTags" href="fotö.html"> Fotö</a>
       </div>
       <article class="islandName">Öckerö kommun</article>
     </nav>
