--- a/kalvsund.html
+++ b/kalvsund.html
@@ -55,14 +55,15 @@
         <a id="islandTags" href="grötö.html">Grötö</a> -
         <a id="islandTags" href="fotö.html">Fotö</a>
       </div>
+
+      <!--container för infosidan-->
+      <article class="islandName">Kalvsund</article>
     </nav>
-    <!--container för infosidan-->
-    <article class="islandName">Kalvsund</article>
     <div class="islandContainer1">
       <div id="islandChild">
         <div class="islandPage">
           <img id="bigPicture" src="image/kalvsund.jpg" alt="kalvsund" />
-          <div class="flex-button">
+          <div class="flex-buttonIslands">
             <p id="islandText1">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               Perferendis odio, quas velit vero accusamus suscipit maiores
@@ -153,7 +154,7 @@
         <a id="decoration" href="index.html">Hem</a>
         <a id="decoration" href="newsletter.html">Nyhetsbrev</a>
         <a id="decoration" href="contact.html">Kontakt</a>
-        <a id="decoration" href="maps.html">Karta</a> <br /><br />
+        <a id="decoration" href="maps.html">Karta</a>
         <search id="searchBar">
           <form action="/action_page.php" target="_blank">
             <input type="text" id="fsearch" name="fsearch" placeholder="" />
@@ -181,12 +182,12 @@
 
     <!--footer-->
     <footer>
-      <address id="adress">
+      <article id="adress">
         Fredrica Alfredsson<br />
         Nygatan 1<br />
         123 45 HÖNÖ<br />
         Telefon: 0123-45 67 89<br />
-      </address>
+      </article>
       <div class="copyright">
         <span class="material-symbols-outlined"> copyright </span>
         Frippan
