--- a/maps.html
+++ b/maps.html
@@ -55,11 +55,11 @@
         <a id="islandTags" href="grötö.html">Grötö</a> -
         <a id="islandTags" href="fotö.html">Fotö</a>
       </div>
-    </nav>
 
-    <article class="islandName">Karta</article>
+      <article class="islandName">Karta</article>
+    </nav>
     <!--formuläret-->
-    <div class="islandContainer">
+    <div class="islandContainer2Map">
       <div id="islandChild">
         <div class="islandPage">
           <section class="flex-button">
@@ -69,11 +69,11 @@
       </div>
 
       <!--kolumn med sök ruta-->
-      <nav id="search">
-        <a id="decoration" href="index.html">Hem</a>
-        <a id="decoration" href="newsletter.html">Nyhetsbrev</a>
-        <a id="decoration" href="contact.html">Kontakt</a>
-        <a id="decoration" href="maps.html">Karta</a> <br /><br />
+      <nav id="searchMap">
+        <a id="decorationMap" href="index.html">Hem</a>
+        <a id="decorationMap" href="newsletter.html">Nyhetsbrev</a>
+        <a id="decorationMap" href="contact.html">Kontakt</a>
+        <a id="decorationMap" href="maps.html">Karta</a>
         <search id="searchBar">
           <form action="/action_page.php" target="_blank">
             <input type="text" id="fsearch" name="fsearch" placeholder="" />
@@ -84,12 +84,12 @@
     </div>
 
     <footer>
-      <address id="adress">
+      <article id="adress">
         Fredrica Alfredsson<br />
         Nygatan 1<br />
         123 45 HÖNÖ<br />
         Telefon: 0123-45 67 89<br />
-      </address>
+      </article>
       <div class="copyright">
         <span class="material-symbols-outlined"> copyright </span>
         Frippan
