--- a/öckerö.html
+++ b/öckerö.html
@@ -180,6 +180,10 @@
       />
     </div>
 
+    <button onclick="topFunction()" id="goTopButton" title="Go to top">
+      BACK
+    </button>
+
     <!--footer-->
     <footer>
       <article id="adress">
@@ -208,5 +212,30 @@
         ></a>
       </div>
     </footer>
+
+    <script>
+      let mybutton = document.getElementById("goTopButton");
+
+      // knappen som går tillbaka till toppen av sidan
+      window.onscroll = function () {
+        scrollFunction();
+      };
+
+      function scrollFunction() {
+        if (
+          document.body.scrollTop > 20 ||
+          document.documentElement.scrollTop > 20
+        ) {
+          mybutton.style.display = "block";
+        } else {
+          mybutton.style.display = "none";
+        }
+      }
+
+      function topFunction() {
+        document.body.scrollTop = 20;
+        document.documentElement.scrollTop = 20;
+      }
+    </script>
   </body>
 </html>
