snygga till noteringarna/kommentarerna

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/contact.css" />
     <link rel="stylesheet" href="style/main-style.css" />
+    <link rel="stylesheet" href="style/islands-style.css" />
     <title>Kontakt</title>
     <!--länk till font/typsnitt-->
     <link
@@ -84,7 +85,7 @@
       </div>
 
       <!--kolumn med sök ruta-->
-      <nav id="searchContact">
+      <nav id="search">
         <a id="decorationContact" href="index.html">Hem</a>
         <a id="decorationContact" href="newsletter.html">Nyhetsbrev</a>
         <a id="decorationContact" href="contact.html">Kontakt</a>
