--- a/maps.html
+++ b/maps.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/map.css" />
     <link rel="stylesheet" href="style/main-style.css" />
+    <link rel="stylesheet" href="style/islands-style.css" />
     <title>Nyhetsbrev</title>
     <!--länk till font/typsnitt-->
     <link
@@ -69,7 +70,7 @@
       </div>
 
       <!--kolumn med sök ruta-->
-      <nav id="searchMap">
+      <nav id="search">
         <a id="decorationMap" href="index.html">Hem</a>
         <a id="decorationMap" href="newsletter.html">Nyhetsbrev</a>
         <a id="decorationMap" href="contact.html">Kontakt</a>
