--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </div>
       </div>
     </header>
+
     <!--Öarnas namn som utgör Öckerö kommun-->
     <nav id="top">
       <div id="topText">
@@ -61,6 +62,7 @@
       </div>
       <article class="islandName">Öckerö kommun</article>
     </nav>
+
     <!--infosidor om öarna med länk-->
     <div class="container">
       <div id="islands">
@@ -270,6 +272,7 @@
         </search>
       </nav>
     </div>
+
     <!--information text över footer på första sidan"-->
     <div class="infoBox">
       "Kommunen utgörs av 10 bebodda öar och är jämte Gotland den enda kommun i
@@ -278,6 +281,7 @@
       skräp."
     </div>
 
+    <!--back knappen - go to the top-->
     <button onclick="topFunction()" id="goTopButton" title="Go to top">
       BACK
     </button>
@@ -314,7 +318,7 @@
     <script>
       let mybutton = document.getElementById("goTopButton");
 
-      // knappen som går tillbaka till toppen av sidan
+      // back knappen - go to the top
       window.onscroll = function () {
         scrollFunction();
       };
