gjorde en alert i kontakt sidan

--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,12 @@
                 value=""
               /><br /><br />
               <textarea>Ditt meddelande...</textarea><br />
-              <input type="submit" value="Skicka" />
+              <button
+                type="button"
+                onclick="alert('Tack! Vi återkommer så fort vi kan')"
+              >
+                Skicka!
+              </button>
             </form>
           </section>
         </div>
