fixa till formuläret under contact

--- a/contact.html
+++ b/contact.html
@@ -75,9 +75,10 @@
                 type="number"
                 id="number"
                 name="number"
-                value=""
-              /><br /><br />
-              <textarea>Ditt meddelande...</textarea><br />
+                value="Skriv meddelande:"
+              /><br />
+              <label id="namn" for="number">Skriv meddelande:</label><br />
+              <textarea></textarea><br />
               <button
                 type="button"
                 onclick="alert('Tack! Vi återkommer så fort vi kan')"
