la till kommentar i html om knappen och alert meddelandet

--- a/contact.html
+++ b/contact.html
@@ -79,6 +79,7 @@
               /><br />
               <label id="namn" for="number">Skriv meddelande:</label><br />
               <textarea></textarea><br />
+              <!--när användaren trycker på skicka kommer en ruta/ett meddelande-->
               <button
                 type="button"
                 onclick="alert('Tack! Vi återkommer så fort vi kan')"
