--- a/newsletter.html
+++ b/newsletter.html
@@ -70,6 +70,7 @@
               <label id="epost" for="epost">Email:</label><br />
               <input type="email" id="epost" name="epost" /><br />
               <br />
+              <!--när användaren trycker på skicka kommer en ruta/ett meddelande-->
               <button
                 type="button"
                 onclick="alert('Tack du är ny registrerad för nyhetsbrev!')"
